--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,12 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <!-- <link rel="icon" href="<%= BASE_URL %>favicon.ico"> -->
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🧿</text></svg>">
-    <title>Kristina Diamond - Developer</title>
+    <meta property="og:title" content="Kristina Diamond - Developer">
+      <title>Kristina Diamond - Developer</title>
+    <meta property="og:description" content="front end web developer specializing in shopify">
+    <meta property="og:image" content="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🧿</text></svg>">
+    <meta property="og:url" content="https://www.kristinadiamond.com">
   </head>
   <body>
     <noscript>
