updated meta data

--- a/public/index.html
+++ b/public/index.html
@@ -1,27 +1,20 @@
 <!DOCTYPE html>
-<html lang="">
-  <head>
+<html lang="en">
+    <head>
+      <meta charset="UTF-8">
+      <title>Kristina Diamond - Web Developer</title>
+      <meta name="viewport" content="initial-scale=1.0, width=device-width">
+      <meta name="description" content="front end web developer specializing in shopify">
+      <meta name="keywords" content="digital studio, development, web development, app development, start ups">
+      <meta name="og:url" content="https://www.kristinadiamond.com">
+      <meta name="fragment" content="!">
+      <meta http-equiv="Accept-CH" content="DPR, Width, Viewport-Width">
+      <meta name="og:image" content="/kristinadiamond.gif">
+      <meta property="og:locale" content="en_US">
+      <link rel="shortcut icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🧿</text></svg>">>
+      <meta property="og:site_name" content="Kristina Diamond - Web Developer">
+    </head>
 
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <meta name="viewport" content="width=device-width, user-scalable=no" />
-
-    <link rel="apple-touch-icon" sizes="180x180" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🧿</text></svg>">
-    <link rel="icon" sizes="32x32" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🧿</text></svg>">
-    <link rel="icon" sizes="16x16" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🧿</text></svg>">
-    <link rel="mask-icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🧿</text></svg>">
-    <!-- <link rel="manifest" href="/site.webmanifest"> -->
-    <!-- <meta name="msapplication-TileColor" content="#da532c"> -->
-    <!-- <meta name="theme-color" content="#ffffff"> -->
-
-    <title>Kristina Diamond - Developer</title>
-    <meta property="og:title" content="Kristina Diamond - Developer">
-    <meta property="og:description" content="front end web developer specializing in shopify">
-    <meta property="og:image" content="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🧿</text></svg>">
-    <meta property="og:url" content="https://www.kristinadiamond.com">
-    
-  </head>
   <body>
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
