trying to fix gh-pages issue

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
       <meta http-equiv="Accept-CH" content="DPR, Width, Viewport-Width">
       <meta name="og:image" content="/kristinadiamond.gif">
       <meta property="og:locale" content="en_US">
-      <link rel="shortcut icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🧿</text></svg>">>
+      <link rel="shortcut icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🧿</text></svg>">
       <meta property="og:site_name" content="Kristina Diamond - Web Developer">
     </head>
 
