--- a/public/index.html
+++ b/public/index.html
@@ -7,12 +7,16 @@
       <meta name="description" content="front end web developer specializing in shopify">
       <meta name="keywords" content="digital studio, development, web development, app development, start ups">
       <meta name="og:url" content="https://www.kristinadiamond.com">
-      <meta name="fragment" content="!">
-      <meta http-equiv="Accept-CH" content="DPR, Width, Viewport-Width">
-      <meta name="og:image" content="/kristinadiamond.gif">
       <meta property="og:locale" content="en_US">
-      <link rel="shortcut icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🧿</text></svg>">
       <meta property="og:site_name" content="Kristina Diamond - Web Developer">
+
+      <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+      <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+      <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+      <link rel="manifest" href="/site.webmanifest">
+      <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#4200ff">
+      <meta name="msapplication-TileColor" content="#4200ff">
+      <meta name="theme-color" content="#ffffff">
     </head>
 
   <body>
