--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
       <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
       <link rel="manifest" href="/site.webmanifest">
       <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#4200ff">
-      <meta name="msapplication-TileColor" content="#4200ff">
+      <meta name="msapplication-TileColor" content="#ffc40d">
       <meta name="theme-color" content="#ffffff">
     </head>
 
